doc updated, likes and dislikes done, login and user register get return user data
